@@ -33,6 +33,7 @@ exportMethods(removeEmptyConditions)
 exportMethods(rowViews)
 exportMethods(show)
 exportMethods(summary)
+exportMethods(updateMedianInjectionTime)
 import(BiocGenerics)
 import(Biostrings)
 import(S4Vectors)
