@@ -50,4 +50,8 @@ if (is.null(getGeneric("removeEmptyConditions"))) {
     setGeneric("removeEmptyConditions",
         function(object, ...)standardGeneric("removeEmptyConditions"))
 }
+if (is.null(getGeneric("updateMedianInjectionTime"))) {
+    setGeneric("updateMedianInjectionTime",
+        function(object, ...)standardGeneric("updateMedianInjectionTime"))
+}
 
