@@ -9,6 +9,8 @@ Changes in version 1.1.1
 - Never remove Activation column in `colData` (even not if
   `readTopDownFiles(..., dropNonInformativeColumns=TRUE)`) [2017-12-20].
 - Allow UVPD in `fragmentationMap,NCBSet-method` [2017-12-20].
+- Add new method: `updateMedianInjectionTime,TopDownSet-method`
+  (closes #66) [2017-12-20].
 
 Changes in version 1.1.0
 ------------------------
